--- a/lecture5/index.html
+++ b/lecture5/index.html
@@ -287,7 +287,7 @@ via a single node:</li>
 
 	</td>
 	<td style="width:400px; vertical-align:middle">
-		<img data-src="upgma1.svg" style="width:200px; ">
+		<img data-src="upgma1.svg" style="width:100%; ">
 	</td>
 	</tr>
 	</table>
@@ -318,7 +318,7 @@ via a single node:</li>
 
 	</td>
 	<td style="width:400px; vertical-align:middle">
-		<img data-src="upgma2.svg" style="width:200px; ">
+		<img data-src="upgma2.svg" style="width:100% ">
 	</td>
 	</tr>
 	</table>
@@ -329,13 +329,45 @@ via a single node:</li>
 </section>
 
 <section>
+	<h2>UPGMA example</h2>
+	
+	<table class="noborders" style="margin-top:5%;">
+	
+	<tr>
+	
+	<td style="width:50%; text-align:center">
+	
+	Distances<br>
+	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
+	<tr style="border-bottom: solid 1px;"><td style="border-right: solid 1px;"></td><td>ABC</td><td>D</td></tr>
+	<tr><td style="border-right: solid 1px;">ABC</td><td>0</td><td></td></tr>
+	<tr><td style="border-right: solid 1px;">D</td><td><font color="red"><b>12.33</b></font></td><td>0</td></tr>
+	</table>
+	</div>
+
+	</td>
+	<td style="width:50%; vertical-align:middle">
+		<img data-src="upgma3.svg" style="width:100% ">
+	</td>
+	</tr>
+	</table>
+	
+	<div style="margin-left:15%; margin-top:5%; width:70%; text-align:left">
+	UPGMA produces a <font color="red">rooted tree</font> and assumes that evolution is <font color="red">clock-like</font>, 
+	i.e. it assumes that the rate of substitution is the same on all branches of the tree.
+
+	</div>
+</section>
+
+
+<section>
 	<h2>UPGMA weaknesses</h2>
 	
 	<table class="noborders" style="margin-top:5%;">
 	
 	<tr>
 	
-	<td style="width:400px; text-align:center">
+	<td style="width:50%; text-align:center">
 	
 	Distances<br>
 	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
@@ -348,8 +380,8 @@ via a single node:</li>
 	</div>
 
 	</td>
-	<td style="width:400px; vertical-align:middle">
-		<img data-src="non-upgma-tree.svg" style="width:250px; ">
+	<td style="width:50%; vertical-align:middle">
+		<img data-src="non-upgma-tree.svg" style="width:100%; ">
 	</td>
 	</tr>
 	</table>
