--- a/lecture5/index.html
+++ b/lecture5/index.html
@@ -269,11 +269,7 @@ via a single node:</li>
 <section>
 	<h2>UPGMA example</h2>
 	
-	<table class="noborders" style="margin-top:5%;">
-	
-	<tr>
-	
-	<td style="width:400px; text-align:center">
+	<div style="float:left; width:50%;">
 	
 	Distances<br>
 	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
@@ -285,14 +281,11 @@ via a single node:</li>
 	</table>
 	</div>
 
-	</td>
-	<td style="width:400px; vertical-align:middle">
-		<img data-src="upgma1.svg" style="width:100%; ">
-	</td>
-	</tr>
-	</table>
+	<div style="float:right; width:50%">
+		<img data-src="upgma1.svg" style="height:250px;">
+	</div>
 	
-	<div style="margin-top:5%; width:100%;">
+	<div style="margin-top:35%; width:100%;">
 	$$d_{B(AC)} = (d_{BA} + d_{BC} )/2 = (8 + 9)/2 = 8.5$$
 	$$d_{D(AC)} = (d_{DA} + d_{DC})/2 = (12 + 11)/2 = 11.5$$
 	</div>
@@ -301,11 +294,7 @@ via a single node:</li>
 <section>
 	<h2>UPGMA example</h2>
 	
-	<table class="noborders" style="margin-top:5%;">
-	
-	<tr>
-	
-	<td style="width:400px; text-align:center">
+	<div style="float:left; width:50%;">
 	
 	Distances<br>
 	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
@@ -316,14 +305,11 @@ via a single node:</li>
 	</table>
 	</div>
 
-	</td>
-	<td style="width:400px; vertical-align:middle">
-		<img data-src="upgma2.svg" style="width:100% ">
-	</td>
-	</tr>
-	</table>
+	<div style="float:right; width:50%">
+		<img data-src="upgma2.svg">
+	</div>
 	
-	<div style="margin-top:5%; width:100%;">
+	<div style="margin-top:35%; width:100%;">
 	$$d_{(ABC)D} =(d_{AD} +d_{BD} +d_{CD})/3=(12+14+11)/3 \approx 12.33$$
 	</div>
 </section>
@@ -331,28 +317,21 @@ via a single node:</li>
 <section>
 	<h2>UPGMA example</h2>
 	
-	<table class="noborders" style="margin-top:5%;">
-	
-	<tr>
-	
-	<td style="width:50%; text-align:center">
+	<div style="float:left; width:50%;">
 	
 	Distances<br>
-	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
+	<table class="noborders" style="margin: 0 auto; background-color:lightblue;">
 	<tr style="border-bottom: solid 1px;"><td style="border-right: solid 1px;"></td><td>ABC</td><td>D</td></tr>
 	<tr><td style="border-right: solid 1px;">ABC</td><td>0</td><td></td></tr>
 	<tr><td style="border-right: solid 1px;">D</td><td><font color="red"><b>12.33</b></font></td><td>0</td></tr>
 	</table>
 	</div>
 
-	</td>
-	<td style="width:50%; vertical-align:middle">
-		<img data-src="upgma3.svg" style="width:100% ">
-	</td>
-	</tr>
-	</table>
+	<div style="float:right; width:50%">
+		<img data-src="upgma3.svg" style="height:250px;">
+	</div>
 	
-	<div style="margin-left:15%; margin-top:5%; width:70%; text-align:left">
+	<div style="margin-left:15%; margin-top:35%; width:70%; text-align:left">
 	UPGMA produces a <font color="red">rooted tree</font> and assumes that evolution is <font color="red">clock-like</font>, 
 	i.e. it assumes that the rate of substitution is the same on all branches of the tree.
 
@@ -363,11 +342,7 @@ via a single node:</li>
 <section>
 	<h2>UPGMA weaknesses</h2>
 	
-	<table class="noborders" style="margin-top:5%;">
-	
-	<tr>
-	
-	<td style="width:50%; text-align:center">
+	<div style="float:left; width:50%;">
 	
 	Distances<br>
 	<table class="noborders" style="margin: 0 auto; background-color:lightblue">
@@ -379,14 +354,11 @@ via a single node:</li>
 	</table>
 	</div>
 
-	</td>
-	<td style="width:50%; vertical-align:middle">
-		<img data-src="non-upgma-tree.svg" style="width:100%; ">
-	</td>
-	</tr>
-	</table>
+	<div style="float:right; width:50%">
+		<img data-src="non-upgma-tree.svg" style="height:250px;">
+	</div>
 	
-	<div style="margin-top:5%; margin-left:15%; width:70%; text-align:left">
+	<div style="margin-top:35%; margin-left:15%; width:70%; text-align:left">
 	There is a (non clock-like) tree <font color="red">with a different topology</font> that fits the distance matrix <font color="red">perfectly</font>!	
 	</div>
 </section>
