Added some structure to L7.

--- a/lecture7/index.html
+++ b/lecture7/index.html
@@ -1,3 +1,66 @@
 ---
 lecture_num: 7
 ---
+
+<section>
+    <h2>House-keeping</h2>
+
+    <ol class="spaced" style="margin-top:10%">
+        <li>Lab this Friday. Details to be announced.</li>
+        <li>Assignment is due <b>Friday this week</b>.</li>
+        <li>My office is room 467 (fourth floor) of building 303S (in the CS department)</li>
+        <li>Office hours:
+            <ul>
+                <li>1-3pm, Wednesday</li>
+                <li>Almost any other time, but ...</li>
+                <li>Email <a href="mailto:tgvaughan@gmail.com">tgvaughan@gmail.com</a> to avoid dissapointment.</li>
+            </ul>
+        </li>
+    </ol>
+</section>
+
+<section>
+    <h2> Problems with parsimony </h2>
+
+    <ul>
+        <li> Computationally expensive</li>
+        <li> LBA</li>
+        <li> Other hidden problems</li>
+    </ul>
+</section>
+
+<section>
+    <h2> Modelling neutral sequence evolution</h2>
+</section>
+
+<section>
+    <h2> Likelihood</h2>
+</section>
+
+<section>
+    <h2> Maximum likelihood</h2>
+</section>
+
+<section>
+    <h2> What is the likelihood of a tree?</h2>
+</section>
+
+<section>
+    <h2> Felsenstein's Pruning Algorithm</h2>
+</section>
+
+<section>
+    <h2>Maximum likelihood algorithms</h2>
+</section>
+
+<section>
+    <h2>Maximum likelihood for Phylogenetics</h2>
+</section>
+
+<section>
+    <h2>Problems with ML</h2>
+</section>
+
+<section>
+    <h2>Summary</h2>
+</section>
