--- a/lecture10/index.html
+++ b/lecture10/index.html
@@ -4,17 +4,35 @@ lecture_num: 10
 <section>
 	<h2>The coalescent</h2>
 	
-	<div align="left" style="margin-top:5%; margin-left:15%; width:70%">
+	<div align="left" style="margin-top:5%; margin-left:5%; width:85%">
 	Data: a <font color="red">small genetic sample</font> from a <font color="red">large background population</font>. 
-	<br>
+	<br><br>
 	The coalescent
 	</div>
 	
-	<ul class="spaced" style="margin-top:5%; width:85%">
+	<ul class="spaced" style="margin-top:1%; width:80%">
 	<li>is a model of the ancestral relationships of a sample of individuals taken from a larger population.
 	<li>describes a probability distribution on ancestral genealogies (trees) given a population history, N(t).
 	<li>Therefore the coalescent can convert information from ancestral genealogies into information about population history and vice versa.
 	<li>a model of ancestral genealogies, not sequences, and its simplest form assumes neutral evolution.
 	<li>can be thought of as a prior on the tree, in a Bayesian setting.
 	</ul>	
+</section>
+
+<section>
+	<h2>Theoretical population genetics</h2>
+	
+	<div align="left" style="margin-top:5%; margin-left:5%; width:85%">
+	Most of theoretical population genetics is based on the idealized Wright-Fisher model of population which assumes
+	</div>
+
+	<ul class="spaced" style="margin-top:2%; width:80%">
+	<li>Constant population size N 	
+	<li>Discrete generations
+	<li>Complete mixing
+	</ul>	
+
+	<div align="left" style=" margin-left:5%; width:85%">
+	For the purposes of this presentation the population will be assumed to be haploid, as is the case for many pathogens.
+	</div>
 </section>
